[project]
name = "blooming-health-case-study"
version = "0.1.0"
description = "Case Study 3: LLM Response Quality Evaluator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
]
